--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@material-ui/core": "^4.3.0",
     "bulma": "^0.7.0",
     "gatsby": "^2.1.34",
     "gatsby-image": "^2.0.23",
