--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.3.0",
     "bulma": "^0.7.0",
     "gatsby": "^2.1.34",
